--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
- VITE_NASA_API_KEY="You cam get a free API key on https://api.nasa.gov/"
+ VITE_NASA_API_KEY=6kgjDHwO5gKoq3pB9IaGcvXN8PtfSqapHtsPl6ys
+//You cam get a free API key on https://api.nasa.gov/
   
